edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message Risk {
  string id = 1; // @gotags: sql:"pk"
  RiskSubject subject = 2;
  float score = 3; // @gotags: search:"Risk Score,hidden"

  message Result {
    message Factor {
      string message = 1;
      string url = 2;
    }
    string name = 1;
    repeated Factor factors = 2 [lazy = true];
    float score = 3;
  }
  repeated Result results = 4 [lazy = true];
}

message RiskSubject {
  string id = 1;
  string namespace = 2; // @gotags: search:"Namespace,store"
  string cluster_id = 3; // @gotags: search:"Cluster ID,store,hidden" sql:"type(uuid)"
  RiskSubjectType type = 4; // @gotags: search:"Risk Subject Type,hidden"
}

// Next tag: 9
enum RiskSubjectType {
  UNKNOWN = 0;
  DEPLOYMENT = 1;
  NAMESPACE = 2;
  CLUSTER = 3;
  NODE = 7;
  NODE_COMPONENT = 8;
  IMAGE = 4;
  IMAGE_COMPONENT = 6;
  SERVICEACCOUNT = 5;
}
